--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.7.4",
+    "@aws-sdk/client-s3": "^3.726.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "mime-types": "^2.1.35",
     "mongodb": "^6.11.0",
     "mongoose": "^8.9.2",
     "multiparty": "^4.2.3",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-sortablejs": "^6.1.4",
+    "react-spinners": "^0.15.0",
+    "react-sweetalert2": "^0.6.0",
+    "sortablejs": "^1.15.6"
   },
   "devDependencies": {
     "eslint": "^8",
